# rules_python

./: MODULE.bazel
examples/bzlmod/: test.py
examples/bzlmod/demo/: BUILD.bazel  test.py
python/: extensions.bzl
python/pip_install/: repositories.bzl
