# Load various rules so that we can have bazel download
# various rulesets and dependencies.
# The `load` statement imports the symbol for the rule, in the defined
# ruleset. When the symbol is loaded you can use the rule.

# The names @pip and @python_39 are values that are repository
# names. Those names are defined in the MODULES.bazel file.
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_library(
  name = "declared_dep",
  srcs = ["declared_dep.py"],
)

py_test(
    name = "test",
    srcs = ["test.py"],
    main = "test.py",
    deps = [
      ":declared_dep",
    ],
)

